--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a>Escape.</a><br />
+        <p>Escape.</p>
         <a href="#">Home</a>
         <a href="#">Категории</a>
         <a href="#">about</a>
@@ -19,27 +19,33 @@
     <h1>Lets do it together</h1>
     <p>We trevel ... </p>
 
-    <button type="button">view latest posts </button> <br />
-    <a href="#">Nature</a>
-    <a href="#">Photography</a>
-    <a href="#">Relaxtion</a>
-    <a href="#">Vacation</a>
-    <a href="#">Trevel</a>
-    <a href="#">Adventure</a>
+    <button type="button">view latest posts </button>
+    <nav>
+        <a href="#">Nature </a>
+        <a href="#">Photography </a>
+        <a href="#">Relaxtion </a>
+        <a href="#">Vacation </a>
+        <a href="#">Trevel </a>
+        <a href="#">Adventure </a>
+    </nav>
 
-    <h1>Featured Posts</h1>
-    <p>The Road Ahead </p>
-    <p>The road ahead might be paved - it might not be </p>
-    <p>Mat Vogesls September 25, 2015</p>
-    <p>Adventure From Top Down</p>
-    <p>Once a year, go someplace you are never been before</p>
-    <p>William Wong September 25, 2015</p>
+    <section>
+        <h2>Featured Posts</h2>
+        <p>The Road Ahead </p>
+        <p>The road ahead might be paved - it might not be </p>
+        <p>Mat Vogesls September 25, 2015</p>
+        <p>Adventure From Top Down</p>
+        <p>Once a year, go someplace you are never been before</p>
+        <p>William Wong September 25, 2015</p>
+    </section>
 
     <h1>Most Recent</h1>
     <img src="Frame.png" alt="fronted-backend" />
     Still Standing Tall
 
     <p>Life begins at the end of your comfort zone</p>
+    <p>kek lol kek lol kek lloooool</p>
+    <h1>dadadadada</h1>
 </body>
 
 </html>
