--- a/index.html
+++ b/index.html
@@ -10,42 +10,41 @@
 
 <body>
     <header>
-        <p>Escape.</p>
-        <a href="#">Home</a>
-        <a href="#">Категории</a>
-        <a href="#">about</a>
-        <a href="#">contact</a>
+        <span>Escape.</span>
+        <nav>
+            <a href="#"><span>Home </span></a>
+            <a href="#"><span>Категории </span></a>
+            <a href="#"><span>about </span></a>
+            <a href="#"><span>contact</span></a>
+        </nav>
     </header>
-    <h1>Lets do it together</h1>
-    <p>We trevel ... </p>
+    <article>
+        <h1>Let's do it together</h1>
+        <p>We trevel ... </p>
 
-    <button type="button">view latest posts </button>
-    <nav>
-        <a href="#">Nature </a>
-        <a href="#">Photography </a>
-        <a href="#">Relaxtion </a>
-        <a href="#">Vacation </a>
-        <a href="#">Trevel </a>
-        <a href="#">Adventure </a>
-    </nav>
-
-    <section>
-        <h2>Featured Posts</h2>
-        <p>The Road Ahead </p>
-        <p>The road ahead might be paved - it might not be </p>
-        <p>Mat Vogesls September 25, 2015</p>
-        <p>Adventure From Top Down</p>
-        <p>Once a year, go someplace you are never been before</p>
-        <p>William Wong September 25, 2015</p>
-    </section>
-
-    <h1>Most Recent</h1>
-    <img src="Frame.png" alt="fronted-backend" />
-    Still Standing Tall
-
-    <p>Life begins at the end of your comfort zone</p>
-    <p>kek lol kek lol kek lloooool</p>
-    <h1>dadadadada</h1>
+        <button type="button">view latest posts </button>
+        <section>
+            <nav>
+                <a href="#"><span>Nature</span></a>
+                <a href="#"><span>Photography</span></a>
+                <a href="#"><span>Relaxtion</span></a>
+                <a href="#"><span>Vacation</span></a>
+                <a href="#"><span>Trevel</span></a>
+                <a href="#"><span>Adventure</span></a>
+            </nav>
+        </section>
+        <section>
+            <h2>Featured Posts</h2>
+            <p>The Road Ahead </p>
+            <p>The road ahead might be paved - it might not be </p>
+            <p>Mat Vogesls September 25, 2015</p>
+            <p>Adventure From Top Down</p>
+            <p>Once a year, go someplace you are never been before</p>
+            <p>William Wong September 25, 2015</p>
+        </section>
+    </article>
+    <footer>
+    </footer>
 </body>
 
 </html>
