--- a/index.html
+++ b/index.html
@@ -6,44 +6,139 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-
-<body>
     <header>
         <span>Escape.</span>
         <nav>
-            <a href="#"><span>Home </span></a>
-            <a href="#"><span>Категории </span></a>
-            <a href="#"><span>about </span></a>
-            <a href="#"><span>contact</span></a>
+            <a href="#">HOME</a>
+            <a href="#">CATEGORIES</a>
+            <a href="#">ABOUT</a>
+            <a href="#">CONTACT</a>
         </nav>
+        <section>
+            <h1>Let's do it together</h1>
+            <p><span>We travel the world in search of stories. Come along for the ride.</span></p>
+            <button type="button">view latest posts </button>
+        </section>
     </header>
-    <article>
-        <h1>Let's do it together</h1>
-        <p>We trevel ... </p>
+</head>
 
-        <button type="button">view latest posts </button>
+<body>
+    <div>
+        <a href="#"><span>Nature</span></a>
+        <a href="#"><span>Photography</span></a>
+        <a href="#"><span>Relaxtion</span></a>
+        <a href="#"><span>Vacation</span></a>
+        <a href="#"><span>Trevel</span></a>
+        <a href="#"><span>Adventure</span></a>
+    </div>
+    <article>
+        <div>
+            <header>
+                <h2>Featured Posts</h2>
+            </header>
+            <section>
+                <a href="the-road-ahead.html"><img src="images/first.png" alt="..."></a>
+                <p>The Road Ahead </p>
+                <p>The road ahead might be paved - it might not be </p>
+                <p>
+                    <img src="images/mat.svg" alt="...">
+                    <span>Mat Vogesls</span>
+                    <span>September 25, 2015</span>
+                </p>
+            </section>
+            <section>
+                <a href="#"><img src="images/second.png" alt="..."> </a>
+                <p>From Top Down</p>
+                <p>Once a year, go someplace you've never been before.</p>
+                <p>
+                    <img src="images/wili.svg" alt="...">
+                    <span>William Wong</span>
+                    <span>September 25, 2015</span>
+                </p>
+            </section>
+        </div>
+    </article>
+    <article>
+        <header>
+            <h2>Most Recent</h2>
+        </header>
         <section>
-            <nav>
-                <a href="#"><span>Nature</span></a>
-                <a href="#"><span>Photography</span></a>
-                <a href="#"><span>Relaxtion</span></a>
-                <a href="#"><span>Vacation</span></a>
-                <a href="#"><span>Trevel</span></a>
-                <a href="#"><span>Adventure</span></a>
-            </nav>
+            <img src="images/still.jpg" alt="...">
+            <div>
+                <p>Still Stading Tall</p>
+                <span>Life begins at the end of your comfort zone.</span>
+                <p>
+                    <span><img src="images/wili.svg" alt="...-wong.svg">William Wong</span>
+                    <span>9/25/2015</span>
+                </p>
+            </div>
         </section>
         <section>
-            <h2>Featured Posts</h2>
-            <p>The Road Ahead </p>
-            <p>The road ahead might be paved - it might not be </p>
-            <p>Mat Vogesls September 25, 2015</p>
-            <p>Adventure From Top Down</p>
-            <p>Once a year, go someplace you are never been before</p>
-            <p>William Wong September 25, 2015</p>
+            <img src="images/sunny.png" alt="...">
+            <div>
+                <p>Sunny side up</p>
+                <span>No place is ever as bad as they tell you it's going to be.</span>
+                <p>
+                    <span><img src="images/mat.svg" alt="...-wong.svg">William Wong</span>
+                    <span>9/25/2015</span>
+                </p>
+            </div>
         </section>
+        <section>
+            <img src="images/water.png" alt="...">
+            <div>
+                <p>Water Falls</p>
+                <span>We travel not escape life, but for life not to escape us.</span>
+                <p>
+                    <span><img src="images/mat.svg" alt="...-wong.svg">William Wong</span>
+                    <span>9/25/2015</span>
+                </p>
+            </div>
+        </section>
+        <section>
+            <img src="images/through.png" alt="...">
+            <div>
+                <p>Through the Mist</p>
+                <span>Travel makes you see what a tiny place you occupy in the world.</span>
+                <p>
+                    <span><img src="images/wili.svg" alt="...-wong.svg">William Wong</span>
+                    <span>9/25/2015</span>
+                </p>
+            </div>
+        </section>
+        <section>
+            <img src="images/Awaken.png" alt="...">
+            <div>
+                <p>Awaken Early</p>
+                <span>Not all those who wander are lost.</span>
+                <p>
+                    <span><img src="images/mat.svg" alt="...-wong.svg">William Wong</span>
+                    <span>9/25/2015</span>
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <img src="images/fals.png" alt="...">
+            <div>
+                <p>Try it Always</p>
+                <span>The world is a book, and those who do not travel read only one page.</span>
+                <p>
+                    <span><img src="images/mat.svg" alt="...-wong.svg">William Wong</span>
+                    <span>9/25/2015</span>
+                </p>
+            </div>
+        </section>
+
     </article>
     <footer>
+        <span>Escape</span>
+        <nav>
+            <a href="#">HOME</a>
+            <a href="#">CATEGORIES</a>
+            <a href="#">ABOUT</a>
+            <a href="#">CONTACT</a>
+        </nav>
     </footer>
 </body>
 
