--- a/the-road-ahead.html
+++ b/the-road-ahead.html
@@ -5,28 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/styleAhead.css">
     <title>Document</title>
     <header>
-        <span>Escape.</span>
-        <nav>
-            <a href="index.html">HOME</a>
-            <a href="#">CATEGORIES</a>
-            <a href="#">ABOUT</a>
-            <a href="#">CONTACT</a>
-        </nav>
-        <section>
-            <h1>The Road Ahead</h1>
-            <p>The road ahead might be paved - it might not be</p>
+        <div class="cap-main__head">
+            <img class="cap-main__escape" src="image/Escape_Black.png" alt="kek">
+            <ul class="cap-main__links">
+                <a href="#" class="cap-main__links-link">HOME</a>
+                <a href="#" class="cap-main__links-link">CATEGORIES</a>
+                <a href="#" class="cap-main__links-link">ABOUT</a>
+                <a href="#" class="cap-main__links-link">CONTACT</a>
+            </ul>
+        </div>
+        <section class="cap-main__text">
+            <h1 class="cap-main__text-header">The Road Ahead</h1>
+            <p class="cap-main__text-description">The road ahead might be paved - it might not be</p>
         </section>
     </header>
 </head>
 
 <body>
     <section>
-        <img src="images/first.png" alt="...">
+        <img class="top-img" src=".//image/first.png" alt="...">
     </section>
-    <section>
-        <p>
+    <section class="text-size">
+        <p class="top-text">
             Dark spruce forest frowned on either side the frozen waterway. The trees had been stripped by a recent
             wind
             of their white covering of frost, and they seemed to lean towards each other, black and ominous, in the
@@ -40,7 +43,7 @@
             the
             Wild, the savage, frozen-hearted Northland Wild.
         </p>
-        <p>
+        <p class="top-text">
             But there was life, abroad in the land and defiant. Down
             the frozen waterway toiled a string of wolfish dogs. Their bristly fur was rimed with frost. Their
             breath
@@ -56,7 +59,7 @@
             lashed,
             was a long and narrow oblong box.
         </p>
-        <p>
+        <p class="top-text">
             There were other things on the sled—blankets, an axe, and a coffee-pot and
             frying-pan; but prominent, occupying most of the space, was the long and narrow oblong box. In advance
             of
@@ -74,7 +77,7 @@
             cessation
             of movement.
         </p>
-        <p>
+        <p class="top-text">
             But at front and rear, unawed and indomitable, toiled the two men who were not yet dead. Their
             bodies were covered with fur and soft-tanned leather. Eyelashes and cheeks and lips were so coated with
             the
@@ -87,8 +90,8 @@
             of space.
         </p>
     </section>
-    <footer>
-        <span>Escape</span>
+    <footer class="footer">
+        <img src="image/Escape..svg" alt="kek">
         <nav>
             <a href="#">HOME</a>
             <a href="#">CATEGORIES</a>
