--- a/pages/admin.html
+++ b/pages/admin.html
@@ -96,12 +96,11 @@
                             <input id="small-image" class="trash-hidden _req1" type="file" name="SimageInput">
                             <label id="block2" for="small-image">
                                 <div class="small-image__size position__bs-image" name="Sblank">
-                                    <img src={{.ImageCamera}} alt="">
+                                    <img id="true" src={{.ImageCamera}} alt="">
                                     <p class="text-upload">{{.Upload}}</p>
                                 </div>
                             </label>
                         </div>
-
                     </div>
                 </div>
                 <div class="right">
@@ -153,13 +152,14 @@
             </div>
         </article>
 
-        <footer class="footer__background">
+        <div class="footer__background">
             <h1 class="footer__title">{{.FooterTitle}}</h1>
             <div class="">
                 <p class="text-style footer__subtitle-size">{{.FooterSubtitle}}</p>
-                <textarea placeholder="Type anything you want ..." class="footer__large-text _req"></textarea>
+                <textarea placeholder="Type anything you want ..." id="text_area"
+                    class="footer__large-text _req"></textarea>
             </div>
-        </footer>
+        </div>
     </form>
     {{end}}
     <script src="../static/style/admin.js"></script>
